fix: about page - improve spacing

--- a/6.Taking.it.to.the.next.level/2.Final.project.myself/css/about.specific.css
+++ b/6.Taking.it.to.the.next.level/2.Final.project.myself/css/about.specific.css
@@ -7,25 +7,25 @@
 .stack-accent {
   background-color: #ffe600;
 }
-/*About page */
+/*page page */
 
-.about {
+.page {
   text-align: center;
 }
 
-.about-title {
+.page-title {
   font-size: 3rem;
 }
-.about-title-accent {
+.page-title-accent {
   height: 1em;
   width: 10em;
 }
-.about-pitch {
+.page-pitch {
   font-weight: 700;
   margin: 0;
 }
 
-.about-seperator {
+.page-seperator {
   width: 6em;
   margin: 0 auto;
   border-bottom: 1px #000 solid;
@@ -39,6 +39,12 @@
     margin: 0 0 6em;
   }
 }
+.about-detail-title {
+  margin-top: 2em;
+}
+.about-detail-title:first-child {
+  margin-top: 0;
+}
 .about-detail-title .article-title-underline {
   margin: initial;
 }
@@ -47,21 +53,21 @@
 /*===================================*/
 /* Layout */
 
-/* About page */
+/* page page */
 
-.about {
-  margin: 3em 0;
+.page {
+  margin: 3em 0 6em;
 }
-.about *,
-.about-details * {
+.page *,
+.page-details * {
   grid-column: 2 / -2;
 }
 
 @media (min-width: 800px) {
-  .about * {
+  .page * {
     grid-column: 3 / -3;
   }
-  .about-details {
+  .page-details {
     grid-template-columns:
       minmax(1em, 1fr)
       repeat(3, minmax(120px, 320px))
